--- a/README.textile
+++ b/README.textile
@@ -30,3 +30,5 @@ h2. Isn't this the same as "livequery?":http://brandonaaron.net/docs/livequery/
 
 It's very similar but with fewer features and a modified API.  I certainly got a lot of inspiration from livequery.  My goal with this is to meet the same need that livequery met for me with a more simplified API and without the features I didn't need.
 
+New feature not added
+
